samples/_failures_safe/1761645437_7757ee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_655a4e18.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_655a4e18.c:151:45: error: missing terminating " character
  151 |             case TOKEN_OPERATOR: type_str = "
      |                                             ^
./samples/SAFE/__tmp_655a4e18.c:151:13: error: expected expression at end of input
  151 |             case TOKEN_OPERATOR: type_str = "
      |             ^~~~
./samples/SAFE/__tmp_655a4e18.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_655a4e18.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_655a4e18.c:151:13: error: expected declaration or statement at end of input
